# spectacle

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  ralph-out.md
.claude/: ralph-loop.local.md
apps/interview-demo/renderer-remotion/: package-lock.json  package.json
apps/interview-demo/renderer-remotion/src/: LayoutScene.tsx
apps/interview-demo/server/: pyproject.toml
apps/interview-demo/server/src/server/: main.py  run_manager.py
apps/interview-demo/server/tests/: test_db.py  test_main.py  test_run_manager.py
apps/interview-demo/web/: package-lock.json  package.json  tsconfig.json
apps/renderer-remotion/: tsconfig.json
apps/renderer-remotion/src/: LayoutScene.tsx  Root.tsx  icons.tsx
apps/server/: pyproject.toml
apps/server/tests/: test_db.py  test_job_queue.py  test_main.py  test_run_manager.py
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: ArtifactPreview.tsx  ArtifactTree.tsx  Nav.tsx  ReviewPanel.tsx
apps/web/lib/: api.ts
docs/superpowers/plans/: 2026-07-03-local-pipeline-plan.md  2026-07-03-local-pipeline-verification.md  2026-07-15-lesson-spec-intake-plan.md  2026-07-15-spectacle-hardening.md
docs/superpowers/specs/: 2026-07-03-poc-pipeline-design.md  2026-07-15-lesson-spec-intake-design.md
domains/education/: pyproject.toml
domains/education/tests/: test_education_pack_wiring.py  test_intake.py  test_lesson_plan.py  test_scene_menu.py  test_structure_agent.py  test_timing.py  test_verification.py
scripts/: test_pipeline.py
(+21 files in other folders)
