[project]
name = "spectacle-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "spectacle-core",
    "spectacle-education",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "psycopg[binary]>=3.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
